# simple_emailer_exec

./: .env.dist  .flake8  .gitignore  LICENSE.md  README.md  config.json  pyproject.toml
emails/: example_with_args.html  example_without_args.html
simple_emailer_exec/: __main__.py  args.py  args_parser.py  argsenv.py  config.py  get_email_text.py  setup_logging.py
