[tool.poetry]
name = "simple-emailer-exec"
version = "0.1.0"
description = "Утилита, позволяющая отправлять письма из терминала по протоколу SMTP Gmail."
authors = [
    "Shuwiku <shuwiku@gmail.com>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Shuwiku/simple_emailer_exec"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
simple-emailer = {git = "https://github.com/Shuwiku/simple_emailer.git"}
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
